Initial project setup with security and dev tooling
Add base project files including ESLint, Prettier, VS Code settings, and documentation. Introduce security enforcement and scan workflows, security compliance matrix, and security policy. Add initial extension source, scripts for security enforcement, and vendored media assets. Update .gitignore for improved exclusions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### Node dependencies
-node_modules/
+/node_modules/
 
 ### TypeScript build output
 out/
@@ -50,11 +50,6 @@ temp/
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
-
-### VS Code settings (keep shared settings committed if added intentionally)
-.vscode/*
-!/.vscode/extensions.json
-!/.vscode/settings.json
 
 ### Ignore compiled JS maps if desired (uncomment if noisy)
 # out/**/*.js.map
