Migrate security workflows from npm to pnpm
Updated security-enforcement.yml and security-scan.yml GitHub Actions workflows to use pnpm for dependency installation and scripts instead of npm. This includes setting up pnpm in the workflow and replacing npm commands with their pnpm equivalents for improved performance and consistency.

--- a/.github/workflows/security-enforcement.yml
+++ b/.github/workflows/security-enforcement.yml
@@ -19,10 +19,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: latest
 
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
 
     - name: Run Security Enforcement
       run: npx ts-node scripts/ci-security-enforcement.ts
@@ -73,10 +77,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: latest
 
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
 
     - name: TypeScript compilation check
       run: npx tsc --noEmit --skipLibCheck
