--- a/.github/workflows/security-enforcement.yml
+++ b/.github/workflows/security-enforcement.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   security-enforcement:
     runs-on: ubuntu-latest
