--- a/.github/workflows/security-enforcement.yml
+++ b/.github/workflows/security-enforcement.yml
@@ -31,7 +31,7 @@ jobs:
         version: latest
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --no-frozen-lockfile
 
     - name: Run Security Enforcement
       run: npx ts-node scripts/ci-security-enforcement.ts
@@ -89,7 +89,7 @@ jobs:
         version: latest
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --no-frozen-lockfile
 
     - name: TypeScript compilation check
       run: npx tsc --noEmit --skipLibCheck
