--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -25,7 +25,7 @@ jobs:
         version: latest
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --no-frozen-lockfile
 
     - name: Run security scan
       run: pnpm run security:scan
@@ -56,7 +56,7 @@ jobs:
         version: latest
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --no-frozen-lockfile
 
     - name: Run npm audit
       run: pnpm audit --audit-level moderate
