--- a/package.json
+++ b/package.json
@@ -520,6 +520,7 @@
     "vitest": "^2.0.0",
     "@vitest/ui": "^2.0.0",
     "@vitest/coverage-v8": "^2.0.0",
+    "esbuild": "^0.25.0",
     "sharp": "^0.33.4"
   }
 }
