--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["node", "vscode", "vitest/globals"],
+    "types": ["node", "vscode"],
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
@@ -18,6 +18,7 @@
     }
   },
   "include": [
-    "src"
+    "src",
+    "src/test/vitest-globals.d.ts"
   ]
 }
