--- a/package.json
+++ b/package.json
@@ -507,20 +507,25 @@
   "dependencies": {
     "fast-glob": "^3.3.2"
   },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "^0.25.0"
+    }
+  },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/vscode": "^1.93.0",
-    "typescript": "^5.5.4",
-    "eslint": "^9.9.0",
-    "@typescript-eslint/parser": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "prettier": "^3.3.3",
+    "@typescript-eslint/parser": "^8.5.0",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
+    "esbuild": "^0.25.10",
+    "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "vitest": "^2.0.0",
-    "@vitest/ui": "^2.0.0",
-    "@vitest/coverage-v8": "^2.0.0",
-    "esbuild": "^0.25.0",
-    "sharp": "^0.33.4"
+    "prettier": "^3.3.3",
+    "sharp": "^0.33.4",
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.9"
   }
 }
