Add command activation events and webview cmd bridge
Expanded activationEvents in package.json to include multiple command triggers for performance, security, docs, debug, and test features. Updated unifiedWebviewFactory to use data-cmd instead of data-action and to allow raw HTML content. Enhanced webview.ts to standardize message posting, add bridges for button clicks, form submissions, and input changes using data-cmd, improving communication between webview UI and extension.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,26 @@
     "url": "https://github.com/glueful/vs-code-extension/issues"
   },
   "activationEvents": [
-    "onLanguage:php"
+    "onLanguage:php",
+    "onCommand:glueful.performance.start",
+    "onCommand:glueful.performance.stop",
+    "onCommand:glueful.performance.showDashboard",
+    "onCommand:glueful.performance.analyzeQueries",
+    "onCommand:glueful.performance.memoryProfile",
+    "onCommand:glueful.performance.cacheAnalysis",
+    "onCommand:glueful.security.showReport",
+    "onCommand:glueful.security.fixSecurityIssue",
+    "onCommand:glueful.security.showPolicies",
+    "onCommand:glueful.security.auditLogs",
+    "onCommand:glueful.docs.cookbook",
+    "onCommand:glueful.docs.tutorials",
+    "onCommand:glueful.docs.quickHelp",
+    "onCommand:glueful.docs.contextHelp",
+    "onCommand:glueful.docs.refresh",
+    "onCommand:glueful.debug.startProfiling",
+    "onCommand:glueful.debug.stopProfiling",
+    "onCommand:glueful.test.runMethod",
+    "onCommand:glueful.test.debugMethod"
   ],
   "contributes": {
     "views": {
